Opened 13 years ago

Closed 13 years ago

#2682 closed defect (fixed)

mmsh seeking regression

Reported by: Carl Eugen Hoyos Owned by:
Priority: important Component: undetermined
Version: git-master Keywords: mms regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Ticket #358 is reproducible again: Seeking in a mssh stream used to work with 8b08f81, fails since 7b0b10c, issue can be reproduced easier with ffplay (but that's hard to show here) since old ffmpeg produces some A/V desync while ffplay plays fine after seeking.

$ ffmpeg -ss 60 -i "mmsh://straumod.nrk.no/disk11/Supermorgen/2011-03-11/MSUS54000411AA-1Mbit.wmv?UseSilverlight=1" -qscale 2 -t 10 out.avi
ffmpeg version N-54090-gac604e4 Copyright (c) 2000-2013 the FFmpeg developers
  built on Jun 18 2013 01:22:10 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl --disable-indev=jack
  libavutil      52. 37.101 / 52. 37.101
  libavcodec     55. 16.100 / 55. 16.100
  libavformat    55.  9.100 / 55.  9.100
  libavdevice    55.  2.100 / 55.  2.100
  libavfilter     3. 77.101 /  3. 77.101
  libswscale      2.  3.100 /  2.  3.100
  libswresample   0. 17.102 /  0. 17.102
  libpostproc    52.  3.100 / 52.  3.100
Read data packet header failed!
Get http header data failed!
mmsh://straumod.nrk.no/disk11/Supermorgen/2011-03-11/MSUS54000411AA-1Mbit.wmv?UseSilverlight=1: could not seek to position 60.000
Guessed Channel Layout for  Input Stream #0.1 : stereo
Input #0, asf, from 'mmsh://straumod.nrk.no/disk11/Supermorgen/2011-03-11/MSUS54000411AA-1Mbit.wmv?UseSilverlight=1':
  Metadata:
    artist          : NRK
    copyright       : NRK
    WMFSDKNeeded    : 0.0.0.0000
    DeviceConformanceTemplate: L1
    WM/WMADRCPeakReference: 12325
    WM/WMADRCAverageReference: 3248
    WMFSDKVersion   : 10.00.00.4007
    IsVBR           : 0
  Duration: 00:02:37.80, start: 0.000000, bitrate: N/A
    Stream #0:0(nor): Video: wmv3 (Main) (WMV3 / 0x33564D57), yuv420p, 768x432, 896 kb/s, 25 tbr, 1k tbn, 1k tbc
    Stream #0:1(nor): Audio: wmav2 (a[1][0][0] / 0x0161), 44100 Hz, stereo, fltp, 128 kb/s
Please use -q:a or -q:v, -qscale is ambiguous
Output #0, avi, to 'out.avi':
  Metadata:
    IART            : NRK
    ICOP            : NRK
    WMFSDKNeeded    : 0.0.0.0000
    DeviceConformanceTemplate: L1
    WM/WMADRCPeakReference: 12325
    WM/WMADRCAverageReference: 3248
    WMFSDKVersion   : 10.00.00.4007
    IsVBR           : 0
    ISFT            : Lavf55.9.100
    Stream #0:0(nor): Video: mpeg4 (FMP4 / 0x34504D46), yuv420p, 768x432, q=2-31, 200 kb/s, 25 tbn, 25 tbc
    Stream #0:1(nor): Audio: ac3 ([0] [0][0] / 0x2000), 44100 Hz, stereo, fltp, 192 kb/s
Stream mapping:
  Stream #0:0 -> #0:0 (wmv3 -> mpeg4)
  Stream #0:1 -> #0:1 (wmav2 -> ac3)
Press [q] to stop, [?] for help
[wmv3 @ 0x330dc40] warning: first frame is no keyframe
Read data packet header failed!
Recv other type packet -5
Read data packet header failed!
Recv other type packet -5
Read data packet header failed!
Recv other type packet -5
Read data packet header failed!
Recv other type packet -5
frame=    0 fps=0.0 q=0.0 Lsize=      10kB time=00:00:00.00 bitrate=N/A dup=0 drop=2
video:0kB audio:0kB subtitle:0 global headers:0kB muxing overhead inf%
Output file is empty, nothing was encoded (check -ss / -t / -frames parameters if used)
$ ffmpeg -ss 60 -i "mmsh://straumod.nrk.no/disk11/Supermorgen/2011-03-11/MSUS54000411AA-1Mbit.wmv?UseSilverlight=1" -qscale 2 -t 10 out.avi
ffmpeg version N-35339-g8b08f81, Copyright (c) 2000-2011 the FFmpeg developers
  built on Jun 18 2013 01:00:43 with gcc 4.7.1 20120723 [gcc-4_7-branch revision 189773]
  configuration:
  libavutil    51. 29. 1 / 51. 29. 1
  libavcodec   53. 39. 1 / 53. 39. 1
  libavformat  53. 24. 0 / 53. 24. 0
  libavdevice  53.  4. 0 / 53.  4. 0
  libavfilter   2. 50. 0 /  2. 50. 0
  libswscale    2.  1. 0 /  2.  1. 0
[asf @ 0x234a7e0] parser not found for codec wmav2, packets or times may be invalid.

Seems stream 0 codec frame rate differs from container frame rate: 1000.00 (1000/1) -> 25.00 (25/1)
Input #0, asf, from 'mmsh://straumod.nrk.no/disk11/Supermorgen/2011-03-11/MSUS54000411AA-1Mbit.wmv?UseSilverlight=1':
  Metadata:
    artist          : NRK
    copyright       : NRK
    WMFSDKVersion   : 10.00.00.4007
    WMFSDKNeeded    : 0.0.0.0000
    IsVBR           : 0
  Duration: 00:02:37.80, start: 0.000000, bitrate: N/A
    Stream #0:0(nor): Video: wmv3 (Main) (WMV3 / 0x33564D57), yuv420p, 768x432, 896 kb/s, 25 tbr, 1k tbn, 1k tbc
    Stream #0:1(nor): Audio: wmav2 (a[1][0][0] / 0x0161), 44100 Hz, 2 channels, s16, 128 kb/s
[buffer @ 0x235d1c0] w:768 h:432 pixfmt:yuv420p tb:1/1000000 sar:0/1 sws_param:
Incompatible sample format 's16' for codec 'ac3', auto-selecting format 'flt'
[ac3 @ 0x235bc00] channel_layout not specified
[ac3 @ 0x235bc00] No channel layout specified. The encoder will guess the layout, but it might be incorrect.
Output #0, avi, to 'out.avi':
  Metadata:
    IART            : NRK
    ICOP            : NRK
    WMFSDKVersion   : 10.00.00.4007
    WMFSDKNeeded    : 0.0.0.0000
    IsVBR           : 0
    ISFT            : Lavf53.24.0
    Stream #0:0(nor): Video: mpeg4 (FMP4 / 0x34504D46), yuv420p, 768x432, q=2-31, 200 kb/s, 25 tbn, 25 tbc
    Stream #0:1(nor): Audio: ac3 ([0] [0][0] / 0x2000), 44100 Hz, stereo, flt, 128 kb/s
Stream mapping:
  Stream #0:0 -> #0:0 (wmv3 -> mpeg4)
  Stream #0:1 -> #0:1 (wmav2 -> ac3)
Press [q] to stop, [?] for help
frame=  250 fps= 16 q=2.0 Lsize=    3903kB time=00:00:10.00 bitrate=3197.6kbits/s dup=0 drop=99
video:3627kB audio:250kB global headers:0kB muxing overhead 0.681791%

See also ticket #2581, the crash was fixed by Michael.

Change History (1)

comment:1 by Michael Niedermayer, 13 years ago

Reproduced by developer: set
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.