mmsh: reimplement seeking

Fixes Ticket2682

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>